# cpp_fundamentals

./: .gitignore  CMakeLists.txt  README.md
cpp_skills_training/week_1/day_1/: .~lock.task_description.md#  task_description.md  task_description.txt
cpp_skills_training/week_1/day_1/src/: FileWrapper.cpp  FileWrapper.hpp
cpp_skills_training/week_1/day_1/test/: week_1_day_1_tests.cpp
cpp_skills_training/week_1/day_2/: .~lock.task_description.md#  task_description.md
cpp_skills_training/week_1/day_2/src/: Buffer.cpp  Buffer.hpp
cpp_skills_training/week_1/day_2/test/: week_1_day_2_tests.cpp
cpp_skills_training/week_1/day_3/: .~lock.task_description.md#  task_description.md
cpp_skills_training/week_1/day_3/src/: Shape.cpp  Shape.hpp
cpp_skills_training/week_1/day_3/test/: week_1_day_3_tests.cpp
cpp_skills_training/week_1/day_4/: .~lock.task_description.md#  task_description.md
cpp_skills_training/week_1/day_4/src/: BitOperations.cpp  BitOperations.hpp
cpp_skills_training/week_1/day_4/test/: week_1_day_4_tests.cpp
cpp_skills_training/week_1/day_5/: task_description.md
cpp_skills_training/week_1/day_5/src/: Factorial.cpp  Factorial.hpp
cpp_skills_training/week_1/day_5/test/: week_1_day_5_tests.cpp
cpp_skills_training/week_2/day_1/: task_description.md
cpp_skills_training/week_2/day_1/src/: Library.hpp
cpp_skills_training/week_2/day_1/test/: week_2_day_1_tests.cpp
cpp_skills_training/week_2/day_2/: task_description.md
cpp_skills_training/week_2/day_2/src/: Graph.hpp
cpp_skills_training/week_2/day_2/test/: file.txt  week_2_day_2_tests.cpp
cpp_skills_training/week_2/day_3/: .~lock.task_description.md#  task_description.md
cpp_skills_training/week_2/day_3/src/: Document.cpp  Document.hpp  OwnMakeUnique.cpp  OwnMakeUnique.hpp
cpp_skills_training/week_2/day_3/test/: week_2_day_3_tests.cpp
exercise_2/: README.txt
exercise_2/src/: ServiceCenter.hpp  Vehicle.cpp  Vehicle.hpp  Vehicles.cpp  Vehicles.hpp
exercise_2/test/: exercise_2_tests.cpp
exercise_3/src/: FileWrapper.hpp
exercise_3/test/: exercise_3_tests.cpp
exercise_4/: README.txt
old/exercise_1/: README.txt
old/exercise_1/test/: exercise_1_test.cpp
old/exercise_2/src/: ServiceCenter.cpp  ServiceCenter.hpp
old/exercise_2/test/: exercise_2_tests.cpp
old/exercise_3/src/: FileWrapper.cpp
old/exercise_3/test/: exercise_3_tests.cpp
old/exercise_4/src/: Task.hpp
old/exercise_4/test/: exercise_4_tests.cpp
ptr_ref_const/src/: example.cpp  intVector.cpp  intVector.hpp
ptr_ref_const/test/: example_test.cpp  intVector_test.cpp
